20080802 version: getopt-ada 0.1
20081204 code: updated installer.