@@ -27,7 +27,7 @@ main (int argc, char *argv[])
 
   argv = 0;
 
-  status = install_init ();
+  status = install_init ("conf-sosuffix");
   if (status.status != INSTALL_STATUS_OK) {
     fprintf (stderr, "%s: fatal: init: %s - %s\n", progname,
       status.message, install_error (errno));
