@@ -309,6 +309,7 @@ install_file_copy (const char *src, const char *dst,
 {
   static char dst_tmp [INSTALL_MAX_PATHLEN];
   static char copy_buf [65536];
+  char *copy_ptr;
   FILE *fd_src;
   FILE *fd_dst;
   size_t r;
@@ -342,16 +343,18 @@ install_file_copy (const char *src, const char *dst,
         goto ERR;
       }
     }
+    copy_ptr = copy_buf;
     while (r) {
-      w = fwrite (copy_buf, 1, r, fd_dst);
+      w = fwrite (copy_ptr, 1, r, fd_dst);
       if (w == 0) {
-        if (feof (fd_src)) break;
-        if (ferror (fd_src)) {
+        if (feof (fd_dst)) break;
+        if (ferror (fd_dst)) {
           status.message = "write error";
           goto ERR;
         }
       }
       r -= w;
+      copy_ptr += w;
     }
   }
 
@@ -747,9 +750,11 @@ inst_copy (struct install_item *ins, unsigned int flags)
   static char gid_str [INSTALL_FMT_GID];
   user_id_t uid;
   group_id_t gid;
-  permissions_t perm = { ins->perm };
+  permissions_t perm;
   unsigned long size = 0;
   struct install_status_t status = INSTALL_STATUS_INIT;
+
+  perm.value = ins->perm;
 
   status = install_uidgid_lookup (ins->owner, &uid, ins->group, &gid);
   if (status.status != INSTALL_STATUS_OK) return status;
@@ -1066,7 +1071,9 @@ instchk_copy (struct install_item *ins, unsigned int flags)
   struct install_status_t status = INSTALL_STATUS_INIT;
   user_id_t uid;
   group_id_t gid;
-  permissions_t perm = { ins->perm };
+  permissions_t perm;
+
+  perm.value = ins->perm;
 
   status = install_uidgid_lookup (ins->owner, &uid, ins->group, &gid);
   if (status.status != INSTALL_STATUS_OK) return status;
@@ -1086,7 +1093,9 @@ instchk_link (struct install_item *ins, unsigned int flags)
   struct install_status_t status = INSTALL_STATUS_INIT;
   user_id_t uid;
   group_id_t gid;
-  permissions_t perm = { ins->perm };
+  permissions_t perm;
+
+  perm.value = ins->perm;
 
   status = install_uidgid_lookup (ins->owner, &uid, ins->group, &gid);
   if (status.status != INSTALL_STATUS_OK) return status;
@@ -1106,7 +1115,9 @@ instchk_mkdir (struct install_item *ins, unsigned int flags)
   struct install_status_t status = INSTALL_STATUS_INIT;
   user_id_t uid;
   group_id_t gid;
-  permissions_t perm = { ins->perm };
+  permissions_t perm;
+
+  perm.value = ins->perm;
 
   status = install_uidgid_lookup (ins->owner, &uid, ins->group, &gid);
   if (status.status != INSTALL_STATUS_OK) return status;
@@ -1268,14 +1279,17 @@ install_suffix_sanitize (char *buffer, unsigned int size)
 }
 
 struct install_status_t
-install_init (void)
+install_init (const char *suffix_file)
 {
+  static char error_buffer [INSTALL_MAX_PATHLEN];
   struct install_status_t status = INSTALL_STATUS_INIT;
   FILE *fp;
 
-  fp = fopen ("conf-sosuffix", "rb");
+  fp = fopen (suffix_file, "rb");
   if (fp == NULL) {
-    status.message = "could not open conf-sosuffix";
+    snprintf (error_buffer, sizeof (error_buffer),
+      "could not open %s", suffix_file);
+    status.message = error_buffer;
     status.status = INSTALL_STATUS_ERROR;
     return status;
   }
@@ -1286,11 +1300,15 @@ install_init (void)
   inst_dlib_suffix [0] = '.';
   if (fread (inst_dlib_suffix + 1, 1, sizeof (inst_dlib_suffix) - 2, fp) == 0) {
     if (ferror (fp)) {
-      status.message = "error reading conf-sosuffix";
+      snprintf (error_buffer, sizeof (error_buffer),
+        "error reading %s", suffix_file);
+      status.message = error_buffer;
       status.status = INSTALL_STATUS_ERROR;
     }
     if (feof (fp)) {
-      status.message = "empty conf-sosuffix";
+      snprintf (error_buffer, sizeof (error_buffer),
+        "%s is empty", suffix_file);
+      status.message = error_buffer;
       status.status = INSTALL_STATUS_ERROR;
     }
     fclose (fp);
@@ -1300,7 +1318,9 @@ install_init (void)
   install_suffix_sanitize (inst_dlib_suffix, sizeof (inst_dlib_suffix));
 
   if (fclose (fp) != 0) {
-    status.message = "could not close conf-sosuffix";
+    snprintf (error_buffer, sizeof (error_buffer),
+      "could not close %s", suffix_file);
+    status.message = error_buffer;
     status.status = INSTALL_STATUS_ERROR;
     return status;
   }
